--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -20,6 +20,6 @@ jobs:
             - name: uploading the artifact
               uses: actions/upload-artifact@v2
               with:
-                  name: ${{ ARTIFACT_NAME}}
+                  name: ${{ env.ARTIFACT_NAME }}
                   path: .
 
